@@ -1,6 +1,9 @@
 3.3.2-dev (Next 3.x Release)
 ----------------------------
 
+- ``supervisorctl reload`` now gives an error message if an argument is
+  given.  Patch by Joel Krauska.
+
 3.3.1 (2016-08-02)
 ------------------
 
